--- a/package.json
+++ b/package.json
@@ -11,27 +11,20 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
-    "cors": "^2.8.5",
-    "events": "^3.3.0",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "^11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
-    "express": "^4.18.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-web": "~0.18.7",
     "react-navigation-native": "^0.0.0",
-    "react-navigation-stack": "^2.10.4",
-    "sequelize": "^6.21.4"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "sequelize-cli": "^6.4.1"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
