--- a/app.json
+++ b/app.json
@@ -5,6 +5,10 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "splash": {
+      "image": "./assets/img/splash.jpg",
+      "resizeMode": "cover"
+    }
   }
 }
