--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "lodash.filter": "^4.6.0",
+    "moment": "^2.29.4",
     "npm": "^8.19.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
+    "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.3",
+    "react-native-select-dropdown": "^2.0.4",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "react-navigation-native": "^0.0.0",
