--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "npm": "^8.19.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^2.6.2",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^4.12.4",
-    "react-native-safe-area-context": "^4.3.3",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^2.0.4",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
