--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
       "**/*"
     ],
     "splash": {
-      "image": "./assets/img/splash.jpg",
+      "image": "./assets/img/splash.png",
       "resizeMode": "cover"
     }
   }
