--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "react-native": "0.69.6",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^2.0.4",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "react-navigation-native": "^0.0.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
